<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_item_name"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/hint_item_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_item_quantity"
                android:text="@string/hint_item_quantity"
                android:inputType="textCapWords"
                android:paddingTop="8dp"
                android:paddingLeft="4dp"
                android:paddingBottom="8dp"
                style="@style/EditorFieldStyle"/>
            <ImageButton
                android:id="@+id/button_quantity_del"
                android:layout_alignRight="@+id/button_quantity_add"
                android:layout_marginRight="40dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_remove_white_24dp"/>
            <ImageButton
                android:id="@+id/button_quantity_add"
                android:layout_alignParentRight="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add_white_24dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_item_supplier"
                android:hint="@string/hint_item_supplier"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->

        <ImageView
            android:id="@+id/imgView"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />
        <TextView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:id="@+id/image_uri" />
        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/image_select"
                style="@style/EditorFieldStyle"
                android:text="@string/select_image"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/order_button"
            style="@style/EditorFieldStyle"
            android:layout_alignParentBottom="true"
            android:text="@string/order_more"/>
    </RelativeLayout>

</LinearLayout>
